FIXED: Overflowing searchbar in mobile devices

--- a/src/shared/SearchBar/SearchBar.css
+++ b/src/shared/SearchBar/SearchBar.css
@@ -1,7 +1,7 @@
 .search-bar {
   position: absolute;
-  top: 75px;
-  right: 110px;
+  top: 80px;
+  right: 10px;
   background: white;
   padding: 0.5rem;
   display: flex;
@@ -15,7 +15,7 @@
 
 .search-bar input {
   background: rgba(237, 242, 254, 1);
-  padding: 0.6rem 1rem;
+  padding: 0.6rem 1.2rem;
   font-size: 0.95rem;
   font-weight: 500;
   font-family: inherit;
